# projects

./: .gitignore  README.md  linkedin-description.txt  main.py  projects.spec  pyproject.toml
comands/: angular.py  astro.py  banner.py  bash.py  bun.py  flowbite.py  go.py  rspack.py  utils.py  uv.py  vite.py
