[project]
name = "projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "halo>=0.0.31",
    "inquirerpy>=0.3.4",
    "pyfiglet>=1.0.4",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]

[tool.uv.workspace]
members = [
    "prueba",
]


